fix(app/plans): plan overflow

--- a/src/views/private/Plans/styles.scss
+++ b/src/views/private/Plans/styles.scss
@@ -35,8 +35,13 @@
     }
 
     .plans-grid {
+        width: 100%;
+        height: calc((100vh - 65px) - 100px);
+        overflow: auto;
+        padding-right: 10px;
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        grid-template-rows: 230px;
         grid-gap: 20px;
     }
 }
